src/query_plan/snapshots/tailcall__query_plan__plan__tests__from_operation__PostAndUser.snap
---
source: src/query_plan/plan.rs
expression: execution_plan
---
ExecutionPlan
    fields:
        posts(Some(Id(0))):
            title(None):
                Scalar
            user(Some(Id(1))):
                name(None):
                    Scalar


        user(Some(Id(3))):
            username(None):
                Scalar
            email(None):
                Scalar


    selections:
        Resolver(1):
                name

        Resolver(0):
                title

        Resolver(3):
                username
                email
