src/query_plan/snapshots/tailcall__query_plan__plan__tests__from_operation__PostsSimple.snap
---
source: src/query_plan/plan.rs
expression: req_plan
---
Complex {
    field_plan: FieldPlan {
        resolver: None,
    },
    children: {
        Name(
            "posts",
        ): Complex {
            field_plan: FieldPlan {
                resolver: Some(
                    "Http",
                ),
            },
            children: {
                Name(
                    "title",
                ): Scalar(
                    FieldPlan {
                        resolver: None,
                    },
                ),
            },
        },
    },
}
