src/query_plan/snapshots/tailcall__query_plan__plan__tests__from_operation__simple.snap
---
source: src/query_plan/plan.rs
expression: general_plan
---
GeneralPlan
    fields:
    posts(Some(Id(0))):
        body(None):
            Scalar
        id(None):
            Scalar
        title(None):
            Scalar
        user(Some(Id(1))):
            email(None):
                Scalar
            id(None):
                Scalar
            name(None):
                Scalar
            phone(None):
                Scalar
            username(None):
                Scalar
            website(Some(Id(2))):
                Scalar

        userId(None):
            Scalar

    user(Some(Id(3))):
        email(None):
            Scalar
        id(None):
            Scalar
        name(None):
            Scalar
        phone(None):
            Scalar
        username(None):
            Scalar
        website(Some(Id(4))):
            Scalar

    users(Some(Id(5))):
        email(None):
            Scalar
        id(None):
            Scalar
        name(None):
            Scalar
        phone(None):
            Scalar
        username(None):
            Scalar
        website(Some(Id(6))):
            Scalar


    field_plans:
        FieldPlan[0] (GraphQL) depends on []
        FieldPlan[1] (Http) depends on [0]
        FieldPlan[2] (Http) depends on [1]
        FieldPlan[3] (Http) depends on []
        FieldPlan[4] (Http) depends on [3]
        FieldPlan[5] (Http) depends on []
        FieldPlan[6] (Http) depends on [5]
